# union_avatars_test

./: .gitignore  Dockerfile  README.md  pyproject.toml
sql_app/: crud.py  main.py  models.py  schemas.py
sql_app/db_csv/: items.tsv
