[tool.poetry]
name = "union_avatars_test"
version = "0.1.0"
description = ""
authors = ["jlorenzop <jlorenzo681@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "[standard]"
SQLAlchemy = "^1.4.40"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
